--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
                 <button id="clearThemeInputBtn" title="Clear color" style="display: none;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"></path></svg></button>
             </div>
             <div class="custom-prompt-actions">
-                <button id="themeDialogReset" class="rabbit-default">Rabbit Me!</button>
+                <div class="theme-mode-toggle">
+                    <button id="themeModeLight" class="mode-toggle-btn" title="Light Mode">Light</button>
+                    <button id="themeModeDark" class="mode-toggle-btn" title="Dark Mode">Dark</button>
+                </div>
+                <button id="themeDialogReset" class="rabbit-default" title="Reset to default theme">Rabbit Me!</button>
                 <div class="custom-prompt-actions-right">
                     <button id="themeDialogCancel" class="secondary">Cancel</button>
                     <button id="themeDialogOk">OK</button>
