--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
         <div class="custom-prompt-dialog">
             <p id="themeDialogTitle" class="custom-prompt-title">Change Theme</p>
             <p id="themeDialogError" class="custom-prompt-error"></p>
+            <div id="themePreviewPane">
+                <h3 class="preview-header">Category Header</h3>
+                <div class="preview-item">
+                    <span class="preview-text">Link Item Text</span>
+                    <span class="preview-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 18.26l-7.053 3.948 1.575-7.928L.587 8.792l8.027-.952L12 .5l3.386 7.34 8.027.952-5.935 5.488 1.575 7.928z"></path></svg></span>
+                </div>
+            </div>
             <ul id="themeColorList" class="theme-color-list scrollable-list-dialog" tabindex="-1"></ul>
             <div class="dialog-input-wrapper">
                 <input type="text" id="themeDialogInput" placeholder="Or type a name/hex here">
