Updated website content

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <div class="custom-prompt-dialog">
             <p id="themeDialogTitle" class="custom-prompt-title">Change Theme</p>
             <p id="themeDialogError" class="custom-prompt-error"></p>
+            <p class="preview-label">Live Preview</p>
             <div id="themePreviewPane">
                 <h3 class="preview-header">Category Header</h3>
                 <div class="preview-item">
