Updated website content

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="actions-bar">
             <div class="list-actions">
                 <div class="view-controls">
-                    <span id="toggleViewBtn" class="view-btn"></span>
+                    <button id="toggleViewBtn" class="view-btn"></button>
                 </div>
                 <a href="#" id="toggleAllLink" style="display: none;"></a>
                 <button id="quickLaunchBtn" title="Launch Favorite">
