--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <p id="themeDialogError" class="custom-prompt-error"></p>
             <ul id="themeColorList" class="theme-color-list scrollable-list-dialog" tabindex="-1"></ul>
             <div class="dialog-input-wrapper">
-                <input type="text" id="themeDialogInput" placeholder="Or type a name/hex here">
+                <input type="text" id="themeDialogInput" placeholder="e.g., 'SteelBlue' or #3498db">
                 <button id="clearThemeInputBtn" title="Clear color" style="display: none;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"></path></svg></button>
             </div>
             <div class="custom-prompt-actions">
