Updated website content

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="mainView" class="main-view">
         <header>
-            <img id="logoImg" src="launchpad-logo-dark.png" alt="Launch Pad R1 Logo" title="Go to Home">
+            <img id="logoImg" src="launchpad-logo-transparent.png" alt="Launch Pad R1 Logo" title="Go to Home">
             <button id="themeBtn" title="Change Theme">Theme!</button>
         </header>
         <div class="search-section">
