Updated website content

--- a/index.html
+++ b/index.html
@@ -10,15 +10,8 @@
     <div id="mainView" class="main-view">
         <header>
             <div class="icon-previews">
-                <span id="previewClassicPalette">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-                        <path d="M12 3C7.03 3 3 7.03 3 12s4.03 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zM6.5 9c.83 0 1.5.67 1.5 1.5S7.33 12 6.5 12 5 11.33 5 10.5 5.67 9 6.5 9zm3 6c.83 0 1.5.67 1.5 1.5S10.33 18 9.5 18s-1.5-.67-1.5-1.5.67-1.5 1.5-1.5zm5-6c.83 0 1.5.67 1.5 1.5S15.33 12 14.5 12s-1.5-.67-1.5-1.5.67-1.5 1.5-1.5zm3 6c.83 0 1.5.67 1.5 1.5S18.33 18 17.5 18s-1.5-.67-1.5-1.5.67-1.5 1.5-1.5z"/>
-                    </svg>
-                </span>
-                <span id="previewColorDrop">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-                        <path d="M12 2.69l5.66 5.66a8 8 0 1 1-11.32 0L12 2.69zM12 1a1 1 0 0 1 .7.29l5.66 5.66a10 10 0 1 1-12.72 0L11.3.29A1 1 0 0 1 12 1z"/>
-                    </svg>
+                <span id="previewThemePng">
+                    <img src="Theme-transparent.png" alt="Theme Icon Preview">
                 </span>
             </div>
             <img id="logoImg" src="launchpad-logo-transparent.png" alt="Launch Pad R1 Logo" title="Go to Home">
