Updated website content

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <div class="icon-previews">
                 <span id="previewThemePng">
-                    <img src="Theme-transparent.png" alt="Theme Icon Preview">
+                    <img src="Theme-transparentT.svg" alt="Theme Icon Preview">
                 </span>
             </div>
             <img id="logoImg" src="launchpad-logo-transparent.png" alt="Launch Pad R1 Logo" title="Go to Home">
