Updated website content

--- a/index.html
+++ b/index.html
@@ -9,13 +9,10 @@
 <body>
     <div id="mainView" class="main-view">
         <header>
-            <div class="icon-previews">
-                <span id="previewThemePng">
-                    <img src="Theme-transparentT.svg" alt="Theme Icon Preview">
-                </span>
-            </div>
             <img id="logoImg" src="launchpad-logo-transparent.png" alt="Launch Pad R1 Logo" title="Go to Home">
-            <button id="themeBtn" title="Change Theme">Theme!</button>
+            <button id="themeBtn" title="Change Theme">
+                <img src="Theme-transparentT.svg" alt="Theme Icon">
+            </button>
         </header>
         <div class="search-section">
             <div class="search-input-wrapper">
