--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 <body>
     <div id="mainView" class="main-view">
         <header>
-            <img id="logoImg" src="launchpad-logo-transparent.png" alt="Launch Pad R1 Logo" title="Go to Home">
+            <div id="logo" title="Go to Home">
+                <span class="logo-text">Launch Pad R1</span>
+                <svg class="logo-rocket" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                    <path d="M9.5,13.09V19.5c0,0.55,0.45,1,1,1h3c0.55,0,1-0.45,1-1v-6.41l2.13,2.13c0.39,0.39,1.02,0.39,1.41,0l0,0 c0.39-0.39,0.39-1.02,0-1.41L14.5,10.24V5.5c0-0.55-0.45-1-1-1h-3c-0.55,0-1,0.45-1,1v4.74L5.96,13.81c-0.39,0.39-0.39,1.02,0,1.41 l0,0c0.39,0.39,1.02,0.39,1.41,0L9.5,13.09z M12,2.5L10.5,5h3L12,2.5z"/>
+                </svg>
+            </div>
         </header>
         <div class="search-section">
             <div class="search-input-wrapper">
