Updated website content

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@700&display=swap" rel="stylesheet">
     <title>Launch Pad R1</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,8 +14,8 @@
         <header>
             <div id="logo" title="Go to Home">
                 <span class="logo-text">Launch Pad R1</span>
-                <svg class="logo-rocket" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-                    <path d="M9.5,13.09V19.5c0,0.55,0.45,1,1,1h3c0.55,0,1-0.45,1-1v-6.41l2.13,2.13c0.39,0.39,1.02,0.39,1.41,0l0,0 c0.39-0.39,0.39-1.02,0-1.41L14.5,10.24V5.5c0-0.55-0.45-1-1-1h-3c-0.55,0-1,0.45-1,1v4.74L5.96,13.81c-0.39,0.39-0.39,1.02,0,1.41 l0,0c0.39,0.39,1.02,0.39,1.41,0L9.5,13.09z M12,2.5L10.5,5h3L12,2.5z"/>
+                <svg class="logo-rocket" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" >
+                    <path d="M10.254 2.002c.39-.39 1.023-.39 1.414 0l8.25 8.25c.39.39.39 1.023 0 1.414l-1.32 1.32-3.21-3.21c-.34-.34-.88-.38-1.28-.1l-5.49 3.92c-.45.32-.72.85-.72 1.41v3.51h-3.51c-.56 0-1.09-.27-1.41-.72l-3.92-5.49c-.28-.4-.24-.94.1-1.28l3.21-3.21 1.32-1.32c.39-.39 1.023-.39 1.414 0l.09.09zm2.16 3.62L20.664 14.07l-3.21-3.21-5.49 3.92v-3.51l3.62-2.16zM4.93 17.07l-2.86-2.86c-.39-.39-.39-1.023 0-1.414l8.25-8.25c.39-.39 1.023-.39 1.414 0l2.86 2.86c.39.39.39 1.023 0 1.414l-8.25 8.25c-.39.39-1.023.39-1.414 0z"/>
                 </svg>
             </div>
         </header>
