Updated website content

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div id="logo" title="Go to Home">
                 <span class="logo-text">Launch Pad R1</span>
                 <svg class="logo-rocket" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-                    <path d="M9.5,13.09V19.5c0,0.55,0.45,1,1,1h3c0.55,0,1-0.45,1-1v-6.41l2.13,2.13c0.39,0.39,1.02,0.39,1.41,0l0,0 c0.39-0.39,0.39-1.02,0-1.41L14.5,10.24V5.5c0-0.55-0.45-1-1-1h-3c-0.55,0-1,0.45-1,1v4.74L5.96,13.81c-0.39,0.39-0.39,1.02,0,1.41 l0,0c0.39,0.39,1.02,0.39,1.41,0L9.5,13.09z M12,2.5L10.5,5h3L12,2.5z"/>
+                    <path d="M12 2a6 6 0 0 0-6 6c0 2.39 1.41 4.43 3.5 5.41V21a1 1 0 0 0 1 1h5a1 1 0 0 0 1-1v-7.59c2.09-.98 3.5-3.02 3.5-5.41a6 6 0 0 0-6-6zm-2 6a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
                 </svg>
             </div>
         </header>
