Updated website content

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@700&display=swap" rel="stylesheet">
     <title>Launch Pad R1</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,7 +15,7 @@
             <div id="logo" title="Go to Home">
                 <span class="logo-text">Launch Pad R1</span>
                 <svg class="logo-rocket" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-                    <path d="M12 2a6 6 0 0 0-6 6c0 2.39 1.41 4.43 3.5 5.41V21a1 1 0 0 0 1 1h5a1 1 0 0 0 1-1v-7.59c2.09-.98 3.5-3.02 3.5-5.41a6 6 0 0 0-6-6zm-2 6a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
+                    <path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"/>
                 </svg>
             </div>
         </header>
