--- a/index.html
+++ b/index.html
@@ -58,7 +58,12 @@
     
     <div id="themeDialogOverlay" class="custom-prompt-overlay" style="display: none;">
         <div class="custom-prompt-dialog">
-            <p id="themeDialogTitle" class="custom-prompt-title">Change Theme</p>
+            <div class="custom-prompt-title-wrapper">
+                <p id="themeDialogTitle" class="custom-prompt-title">Change Theme</p>
+                <button id="themeStudioBtn" class="studio-btn" title="Open Theme Studio">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2c-5.523 0-10 4.477-10 10s4.477 10 10 10a9.95 9.95 0 0 0 6.323-2.264l-1.342-1.342A8 8 0 1 1 12 4a8.003 8.003 0 0 1 7.932 7.193l1.97-.493A9.988 9.988 0 0 0 12 2zm8.793 10.207l-2 2-4-4 2-2 4 4zM9.07 18.395l-1.414 1.414-2.121-2.121 1.414-1.414 2.121 2.121z"/></svg>
+                </button>
+            </div>
             <p id="themeDialogError" class="custom-prompt-error"></p>
             <ul id="themeColorList" class="theme-color-list scrollable-list-dialog" tabindex="-1"></ul>
             <div class="dialog-input-wrapper">
@@ -116,6 +121,7 @@
         </div>
     </div>
 
+    <script src="theme-engine.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
