Updated website Color Lab and icon

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <div class="custom-prompt-dialog">
             <div class="custom-prompt-title-wrapper">
                 <p id="themeDialogTitle" class="custom-prompt-title">Change Theme</p>
-                <button id="themeStudioBtn" class="studio-btn" title="Open Theme Studio">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2c-5.523 0-10 4.477-10 10s4.477 10 10 10a9.95 9.95 0 0 0 6.323-2.264l-1.342-1.342A8 8 0 1 1 12 4a8.003 8.003 0 0 1 7.932 7.193l1.97-.493A9.988 9.988 0 0 0 12 2zm8.793 10.207l-2 2-4-4 2-2 4 4zM9.07 18.395l-1.414 1.414-2.121-2.121 1.414-1.414 2.121 2.121z"/></svg>
+                <button id="themeStudioBtn" class="studio-btn" title="Open Color Lab">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M19.5 2h-15A2.5 2.5 0 0 0 2 4.5v15A2.5 2.5 0 0 0 4.5 22h15a2.5 2.5 0 0 0 2.5-2.5v-15A2.5 2.5 0 0 0 19.5 2zM8 18H6v-2h2v2zm0-4H6v-2h2v2zm0-4H6V8h2v2zm4 8h-2v-2h2v2zm0-4h-2v-2h2v2zm0-4h-2V8h2v2zm4 8h-2v-2h2v2zm0-4h-2v-2h2v2zm0-4h-2V8h2v2z"/></svg>
                 </button>
             </div>
             <p id="themeDialogError" class="custom-prompt-error"></p>
