--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="custom-prompt-title-wrapper">
                 <p id="themeDialogTitle" class="custom-prompt-title">Change Theme</p>
                 <button id="themeStudioBtn" class="studio-btn" title="Open Color Lab">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M19.5 2h-15A2.5 2.5 0 0 0 2 4.5v15A2.5 2.5 0 0 0 4.5 22h15a2.5 2.5 0 0 0 2.5-2.5v-15A2.5 2.5 0 0 0 19.5 2zM8 18H6v-2h2v2zm0-4H6v-2h2v2zm0-4H6V8h2v2zm4 8h-2v-2h2v2zm0-4h-2v-2h2v2zm0-4h-2V8h2v2zm4 8h-2v-2h2v2zm0-4h-2v-2h2v2zm0-4h-2V8h2v2z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M17.5 2.031L15.469 4H8.53L6.5 2.031A1 1 0 0 1 7.344 1h9.312a1 1 0 0 1 .844 1.031zM6 5v14.5a2.5 2.5 0 0 0 2.5 2.5h7a2.5 2.5 0 0 0 2.5-2.5V5H6zm2 4h2v2H8V9zm4 0h2v2h-2V9zm-4 4h2v2H8v-2zm4 0h2v2h-2v-2z"/></svg>
                 </button>
             </div>
             <p id="themeDialogError" class="custom-prompt-error"></p>
