Updated website content

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="custom-prompt-title-wrapper">
                 <p id="themeDialogTitle" class="custom-prompt-title">Change Theme</p>
                 <button id="themeStudioBtn" class="studio-btn" title="Open Color Lab">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M17.5 2.031L15.469 4H8.53L6.5 2.031A1 1 0 0 1 7.344 1h9.312a1 1 0 0 1 .844 1.031zM6 5v14.5a2.5 2.5 0 0 0 2.5 2.5h7a2.5 2.5 0 0 0 2.5-2.5V5H6zm2 4h2v2H8V9zm4 0h2v2h-2V9zm-4 4h2v2H8v-2zm4 0h2v2h-2v-2z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M17.75 19.998L13 11.5V4h-2v7.5L6.25 19.998A2.5 2.5 0 0 0 8.438 23h7.125a2.5 2.5 0 0 0 2.187-3.002zM9.08 21l3-7h.01l2.91 7H9.08z"/></svg>
                 </button>
             </div>
             <p id="themeDialogError" class="custom-prompt-error"></p>
