Updated website content

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="custom-prompt-title-wrapper">
                 <p id="themeDialogTitle" class="custom-prompt-title">Change Theme</p>
                 <button id="themeStudioBtn" class="studio-btn" title="Open Color Lab">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M17.75 19.998L13 11.5V4h-2v7.5L6.25 19.998A2.5 2.5 0 0 0 8.438 23h7.125a2.5 2.5 0 0 0 2.187-3.002zM9.08 21l3-7h.01l2.91 7H9.08z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M17.25 2.75l-1.5 1.5-2.5-2.5 1.5-1.5a1 1 0 0 1 1.414 0l1.086 1.086zM5.586 12.586l8-8L15 6l-8 8-1.414-1.414zM3.75 15.75l-1.5 1.5a1 1 0 0 0 0 1.414l1.086 1.086a1 1 0 0 0 1.414 0l1.5-1.5-2.5-2.5z"/></svg>
                 </button>
             </div>
             <p id="themeDialogError" class="custom-prompt-error"></p>
