--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
             </div>
             <div class="app-actions">
                 <button id="themeBtn" title="Change Theme">
-                    <img src="Theme-transparentT.svg" alt="Theme Icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 20V4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20Z"></path>
+                    </svg>
                 </button>
                 <button id="deleteAllBtn" title="Delete All Links">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
