Update Theme revamping

--- a/index.html
+++ b/index.html
@@ -60,9 +60,10 @@
         <div class="custom-prompt-dialog">
             <div class="custom-prompt-title-wrapper">
                 <p id="themeDialogTitle" class="custom-prompt-title">Change Theme</p>
-                <button id="themeStudioBtn" class="studio-btn" title="Open Color Lab">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M17.25 2.75l-1.5 1.5-2.5-2.5 1.5-1.5a1 1 0 0 1 1.414 0l1.086 1.086zM5.586 12.586l8-8L15 6l-8 8-1.414-1.414zM3.75 15.75l-1.5 1.5a1 1 0 0 0 0 1.414l1.086 1.086a1 1 0 0 0 1.414 0l1.5-1.5-2.5-2.5z"/></svg>
-                </button>
+                <div id="themeLabToggle" class="lab-toggle-wrapper" style="display: none;" title="Apply a modifier">
+                    <label for="lab-checkbox">Lab</label>
+                    <input type="checkbox" id="lab-checkbox" class="lab-checkbox">
+                </div>
             </div>
             <p id="themeDialogError" class="custom-prompt-error"></p>
             <ul id="themeColorList" class="theme-color-list scrollable-list-dialog" tabindex="-1"></ul>
