--- a/index.html
+++ b/index.html
@@ -122,6 +122,31 @@
         </div>
     </div>
 
+    <!-- Internal YouTube Player View -->
+    <div id="internalPlayerOverlay" style="display: none;">
+        <div class="player-header">
+            <p id="playerVideoTitle"></p>
+        </div>
+        <div class="player-container">
+            <div id="youtubePlayer"></div>
+            <!-- This div will act as a "click shield" to prevent external launches -->
+            <div class="player-click-shield"></div>
+        </div>
+        <div class="player-controls">
+            <div class="player-info-area">
+                <div id="playerStatus"></div>
+                <div class="player-volume-info">
+                    <span id="playerVolume"></span>
+                </div>
+            </div>
+            <div class="player-navigation">
+                <button id="playerBackBtn" class="secondary">Back to Launch Pad</button>
+                <button id="playerSearchBtn" class="secondary">Search</button>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://www.youtube.com/iframe_api"></script>
     <script src="theme-engine.js"></script>
     <script src="script.js"></script>
 </body>
