Update app YT embed intergration

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
         </div>
         <div class="player-controls">
             <div class="player-info-area">
+                <button id="playerPlayPauseBtn" class="dialog-icon-btn"></button>
                 <div id="playerStatus"></div>
                 <div class="player-volume-info">
                     <span id="playerVolume"></span>
