Update YT progress bar

--- a/index.html
+++ b/index.html
@@ -134,6 +134,13 @@
         </div>
         <div class="player-controls">
             <div class="player-info-area">
+                <div class="player-progress-container">
+                    <span id="playerCurrentTime">00:00</span>
+                    <div id="progressBar">
+                        <div id="progressFill"></div>
+                    </div>
+                    <span id="playerDuration">00:00</span>
+                </div>
                 <button id="playerPlayPauseBtn" class="dialog-icon-btn"></button>
                 <div id="playerStatus"></div>
                 <div class="player-volume-info">
