Update YT integration controls

--- a/index.html
+++ b/index.html
@@ -133,7 +133,10 @@
         </div>
         <div class="player-controls">
             <div class="player-info-area">
-                <button id="playerPlayPauseBtn" class="dialog-icon-btn"></button>
+                <div class="player-main-actions">
+                    <button id="playerPlayPauseBtn" class="dialog-icon-btn"></button>
+                    <button id="playerStopBtn" class="dialog-icon-btn"></button>
+                </div>
                 <div id="playerStatus"></div>
                 <div class="player-volume-info">
                     <span id="playerVolume"></span>
