--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
                 <div class="player-main-actions">
                     <button id="playerPlayPauseBtn" class="dialog-icon-btn"></button>
                     <button id="playerStopBtn" class="dialog-icon-btn"></button>
+                    <button id="playerAudioOnlyBtn" class="dialog-icon-btn"></button>
                 </div>
                 <div id="playerStatus"></div>
                 <div class="player-volume-info">
