--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <div id="playerStatus"></div>
             </div>
             <div class="player-navigation">
-                <button id="playerBackBtn" class="secondary">Back to Launch Pad</button>
+                <button id="playerBackBtn" class="secondary">Back</button>
                 <button id="playerPlayPauseBtn" class="dialog-icon-btn"></button>
                 <button id="playerStopBtn" class="dialog-icon-btn"></button>
                 <button id="playerAudioOnlyBtn" class="dialog-icon-btn"></button>
