Stage 2 - Fix Player Resizing

--- a/index.html
+++ b/index.html
@@ -133,7 +133,10 @@
         </div>
         <div class="player-controls">
             <div class="player-navigation">
-                <button id="playerBackBtn" class="secondary">Back to Launch Pad</button>
+                <button id="playerBackBtn" class="secondary">Back</button>
+                <button id="playerPlayPauseBtn" class="dialog-icon-btn"></button>
+                <button id="playerStopBtn" class="dialog-icon-btn"></button>
+                <button id="playerAudioOnlyBtn" class="dialog-icon-btn"></button>
                 <button id="playerSearchBtn" class="secondary">Search</button>
             </div>
         </div>
