[STAGE 7A]: Card Refactor - Add Card CSS & HTML Structure

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
         </div>
 
-        <ul id="linksList"></ul>
+        <div id="cardContainer"></div>
     </div>
     
     <div id="themeDialogOverlay" class="custom-prompt-overlay" style="display: none;">
