Stage 8A: Add YouTube Search UI

--- a/index.html
+++ b/index.html
@@ -139,6 +139,12 @@
                 <button id="playerAudioOnlyBtn" class="dialog-icon-btn"></button>
                 <button id="playerSearchBtn" class="secondary">Search</button>
             </div>
+            <!-- Search UI within the player, hidden by default -->
+            <div id="playerSearchContainer" class="player-search-container" style="display: none;">
+                <input type="text" id="playerSearchInput" placeholder="Search YouTube...">
+                <button id="playerSearchGoBtn">Go</button>
+                <button id="playerSearchCancelBtn" class="secondary">Cancel</button>
+            </div>
         </div>
     </div>
 
