Stage 8A: Implement YouTube Internal Search View

--- a/index.html
+++ b/index.html
@@ -139,12 +139,19 @@
                 <button id="playerAudioOnlyBtn" class="dialog-icon-btn"></button>
                 <button id="playerSearchBtn" class="secondary">Search</button>
             </div>
-            <!-- Search UI within the player, hidden by default -->
-            <div id="playerSearchContainer" class="player-search-container" style="display: none;">
-                <input type="text" id="playerSearchInput" placeholder="Search YouTube...">
-                <button id="playerSearchGoBtn">Go</button>
-                <button id="playerSearchCancelBtn" class="secondary">Cancel</button>
+        </div>
+    </div>
+
+    <!-- YouTube Internal Search View -->
+    <div id="youtubeSearchViewOverlay" class="custom-prompt-overlay" style="display: none;">
+        <div class="youtube-search-view">
+            <div class="search-section">
+                <div class="search-input-wrapper">
+                    <input type="text" id="youtubeSearchInput" placeholder="Search YouTube..." autocomplete="off">
+                </div>
+                <button id="youtubeSearchCancelBtn" class="secondary">Cancel</button>
             </div>
+            <div id="youtubeSearchResultsContainer" class="scrollable-list-dialog"></div>
         </div>
     </div>
 
