--- a/index.html
+++ b/index.html
@@ -149,7 +149,10 @@
                 <div class="search-input-wrapper">
                     <input type="text" id="youtubeSearchInput" placeholder="Search YouTube..." autocomplete="off">
                 </div>
+            </div>
+            <div class="custom-prompt-actions">
                 <button id="youtubeSearchCancelBtn" class="secondary">Cancel</button>
+                <button id="youtubeSearchGoBtn">Search</button>
             </div>
             <div id="youtubeSearchResultsContainer" class="scrollable-list-dialog"></div>
         </div>
